syntax = "proto3";

package ai.metathings.service.motor;

import "motor.proto";

message ListRequest {}

message ListResponse {
	repeated Motor motors = 1;
}
